--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
     "path": "^0.12.7",
+    "resolve-url-loader": "^2.2.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.5"
   }
