--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "flexslider": "^2.6.4",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
+    "plyr": "^2.0.18",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
