--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "file-loader": "^1.1.5",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
+    "import-glob-loader": "^1.1.0",
     "node-sass": "^4.7.2",
     "path": "^0.12.7",
     "resolve-url-loader": "^2.2.0",
